; ModuleID = '/home/carl/AnghaBench/linux/drivers/cpufreq/extr_intel_pstate.c_show_num_pstates.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/cpufreq/extr_intel_pstate.c_show_num_pstates.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpudata = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }
%struct.kobject = type { i32 }
%struct.kobj_attribute = type { i32 }

@intel_pstate_driver_lock = common dso_local global i32 0, align 4
@intel_pstate_driver = common dso_local global i32 0, align 4
@EAGAIN = common dso_local global i32 0, align 4
@all_cpu_data = common dso_local global %struct.cpudata** null, align 8
@.str = private unnamed_addr constant [4 x i8] c"%u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kobject*, %struct.kobj_attribute*, i8*)* @show_num_pstates to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_num_pstates(%struct.kobject* %0, %struct.kobj_attribute* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.kobject*, align 8
  %6 = alloca %struct.kobj_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.cpudata*, align 8
  %9 = alloca i32, align 4
  store %struct.kobject* %0, %struct.kobject** %5, align 8
  store %struct.kobj_attribute* %1, %struct.kobj_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = call i32 @mutex_lock(i32* @intel_pstate_driver_lock)
  %11 = load i32, i32* @intel_pstate_driver, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %3
  %14 = call i32 @mutex_unlock(i32* @intel_pstate_driver_lock)
  %15 = load i32, i32* @EAGAIN, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %35

17:                                               ; preds = %3
  %18 = load %struct.cpudata**, %struct.cpudata*** @all_cpu_data, align 8
  %19 = getelementptr inbounds %struct.cpudata*, %struct.cpudata** %18, i64 0
  %20 = load %struct.cpudata*, %struct.cpudata** %19, align 8
  store %struct.cpudata* %20, %struct.cpudata** %8, align 8
  %21 = load %struct.cpudata*, %struct.cpudata** %8, align 8
  %22 = getelementptr inbounds %struct.cpudata, %struct.cpudata* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.cpudata*, %struct.cpudata** %8, align 8
  %26 = getelementptr inbounds %struct.cpudata, %struct.cpudata* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = sub nsw i32 %24, %28
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %9, align 4
  %31 = call i32 @mutex_unlock(i32* @intel_pstate_driver_lock)
  %32 = load i8*, i8** %7, align 8
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @sprintf(i8* %32, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %33)
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %17, %13
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
